run docker nodes with price feeder

--- a/docker/localnet/docker-compose.yml
+++ b/docker/localnet/docker-compose.yml
@@ -27,17 +27,14 @@ services:
       - type: volume
         source: validator-0-data
         target: /home/cheqd
+      - type: bind
+        source: ./network-config/validator-0
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/validator-0.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: validator-0-node-key
-        target: /node_key
-      - source: validator-0-priv-val-key
-        target: /priv_validator_key
 
   validator-1:
     image: ${BUILD_IMAGE}
@@ -67,17 +64,14 @@ services:
       - type: volume
         source: validator-1-data
         target: /home/cheqd
+      - type: bind
+        source: ./network-config/validator-1
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/validator-1.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: validator-1-node-key
-        target: /node_key
-      - source: validator-1-priv-val-key
-        target: /priv_validator_key
 
   validator-2:
     image: ${BUILD_IMAGE}
@@ -107,17 +101,14 @@ services:
       - type: volume
         source: validator-2-data
         target: /home/cheqd
+      - type: bind
+        source: ./network-config/validator-2
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/validator-2.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: validator-2-node-key
-        target: /node_key
-      - source: validator-2-priv-val-key
-        target: /priv_validator_key
 
   validator-3:
     image: ${BUILD_IMAGE}
@@ -147,17 +138,14 @@ services:
       - type: volume
         source: validator-3-data
         target: /home/cheqd
+      - type: bind
+        source: ./network-config/validator-3
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/validator-3.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: validator-3-node-key
-        target: /node_key
-      - source: validator-3-priv-val-key
-        target: /priv_validator_key
 
   seed-0:
     image: ${BUILD_IMAGE}
@@ -185,17 +173,14 @@ services:
       - type: volume
         source: seed-0-data
         target: /home/cheqd
+      - type: bind
+        source: ./network-config/seed-0
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/seed-0.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: seed-0-node-key
-        target: /node_key
-      - source: seed-0-priv-val-key
-        target: /priv_validator_key
 
   observer-0:
     image: ${BUILD_IMAGE}
@@ -212,10 +197,6 @@ services:
         published: 9591 # gRPC-Gateway port
       - target: 26660
         published: 27160 # Prometheus metrics port
-    volumes:
-      - type: volume
-        source: observer-0-data
-        target: /home/cheqd
     entrypoint: [ "node-start" ]
     healthcheck:
       test: curl -s http://localhost:27157/status | grep -c true
@@ -223,60 +204,23 @@ services:
       timeout: 2s
       retries: 6
       start_period: 15s
+    volumes:
+      - type: volume
+        source: observer-0-data
+        target: /home/cheqd
+      - type: bind
+        source: ./network-config/observer-0
+        target: /home/cheqd/.cheqdnode
     env_file:
       - container-env/observer-0.env
     configs:
-      - source: genesis
-        target: /genesis
       - source: seeds
         target: /seeds
-      - source: observer-0-node-key
-        target: /node_key
-      - source: observer-0-priv-val-key
-        target: /priv_validator_key
 
 configs:
   # Genesis and seeds
-  genesis:
-    file: network-config/genesis.json
   seeds:
     file: network-config/seeds.txt
-
-  # Validator 0
-  validator-0-node-key:
-    file: network-config/validator-0/config/node_key.json
-  validator-0-priv-val-key:
-    file: network-config/validator-0/config/priv_validator_key.json
-
-  # Validator 1
-  validator-1-node-key:
-    file: network-config/validator-1/config/node_key.json
-  validator-1-priv-val-key:
-    file: network-config/validator-1/config/priv_validator_key.json
-
-  # Validator 2
-  validator-2-node-key:
-    file: network-config/validator-2/config/node_key.json
-  validator-2-priv-val-key:
-    file: network-config/validator-2/config/priv_validator_key.json
-
-  # Validator 3
-  validator-3-node-key:
-    file: network-config/validator-3/config/node_key.json
-  validator-3-priv-val-key:
-    file: network-config/validator-3/config/priv_validator_key.json
-
-  # Seed 0
-  seed-0-node-key:
-    file: network-config/seed-0/config/node_key.json
-  seed-0-priv-val-key:
-    file: network-config/seed-0/config/priv_validator_key.json
-
-  # Observer 0
-  observer-0-node-key:
-    file: network-config/observer-0/config/node_key.json
-  observer-0-priv-val-key:
-    file: network-config/observer-0/config/priv_validator_key.json
 
 volumes:
   validator-0-data:
