--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -287,6 +287,11 @@ jobs:
           name: report-post-upgrade.xml
           path: report-post-upgrade.xml
 
+      - name: Run post-upgrade param_change_proposal_test
+        working-directory: ./tests/upgrade/integration/v4
+        run: |
+          ginkgo -r --race --tags upgrade_integration --focus-file update_params_test.go --keep-going
+
       - name: Run integration tests on upgraded network
         working-directory: ./tests/integration
         run: |
