ci: Fix interactive installer to support major version bumps

--- a/installer/templates/cheqd-cosmovisor.service
+++ b/installer/templates/cheqd-cosmovisor.service
@@ -11,8 +11,8 @@ Environment="DAEMON_RESTART_AFTER_UPGRADE={COSMOVISOR_DAEMON_RESTART_AFTER_UPGRA
 Environment="DAEMON_POLL_INTERVAL={DEFAULT_DAEMON_POLL_INTERVAL}"
 Environment="UNSAFE_SKIP_BACKUP={DEFAULT_UNSAFE_SKIP_BACKUP}"
 Environment="DAEMON_RESTART_DELAY={DEFAULT_DAEMON_RESTART_DELAY}"
-ENVIRONMENT="DAEMON_DOWNLOAD_MUST_HAVE_CHECKSUM={DAEMON_DOWNLOAD_MUST_HAVE_CHECKSUM}"
-ENVIRONMENT="DAEMON_SHUTDOWN_GRACE={DAEMON_SHUTDOWN_GRACE}"
+Environment="DAEMON_DOWNLOAD_MUST_HAVE_CHECKSUM={DAEMON_DOWNLOAD_MUST_HAVE_CHECKSUM}"
+Environment="DAEMON_SHUTDOWN_GRACE={DAEMON_SHUTDOWN_GRACE}"
 
 Type=simple
 User=cheqd
