--- a/pricefeeder/price-feeder.toml
+++ b/pricefeeder/price-feeder.toml
@@ -7,15 +7,6 @@ read_timeout = "20s"
 verbose_cors = true
 write_timeout = "20s"
 
-[account]
-address = ""
-chain_id = "cheqd"
-validator = ""
-
-[keyring]
-backend = "test"
-dir = "/home/vitwit/.cheqdnode"
-
 [rpc]
 grpc_endpoint = "localhost:9090"
 rpc_timeout = "100ms"
@@ -29,3 +20,16 @@ enabled = true
 global-labels = [["chain_id", "cheqd"]]
 service-name = "price-feeder"
 prometheus-retention-time = 100
+
+[[provider_endpoints]]
+name = "mexc"
+rest = "https://api.mexc.com/"
+websocket = "wbs.mexc.com"
+
+[[provider_endpoints]]
+name = "coinbase"
+rest = "https://api.exchange.coinbase.com"
+websocket = "ws-feed.exchange.coinbase.com"
+
+## The application currently uses two providers: MEXC and Coinbase.
+## You can update the rest and websocket endpoints for these providers as needed.
