--- a/docker/localnet/upgrade-v4-latest.env
+++ b/docker/localnet/upgrade-v4-latest.env
@@ -4,6 +4,6 @@
 ###             REQUIRED: Node/network selection           ###
 ###############################################################
 # Define cheqd-noded image source. Change if using your own build.
-BUILD_IMAGE_VERSION=4.1.0-develop.1
+BUILD_IMAGE_VERSION=4.1.4
 
 BUILD_IMAGE="ghcr.io/cheqd/cheqd-node:$BUILD_IMAGE_VERSION"
