--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,7 +240,28 @@ jobs:
         run: |
           bash scripts/upgrade_v4.sh
 
-      - name: Verifying docker processes
+      - name: Verifying docker processes (post upgrade v4)
+        working-directory: ./tests/upgrade/integration
+        run: |
+          docker ps -a
+
+      - name: Run pre-upgrade-v4_1 tests
+        working-directory: ./tests/upgrade/integration/v4
+        run: |
+          ginkgo -r --race --tags upgrade_integration --focus-file pre_upgrade_v4_1_test.go --keep-going --trace --junit-report ../../../../report-pre-upgrade-v4_1.xml
+
+      - name: Upload pre-upgrade-v4_1 tests result
+        uses: actions/upload-artifact@v4
+        with:
+          name: report-pre-upgrade-v4_1.xml
+          path: report-pre-upgrade-v4_1.xml
+
+      - name: Restart network using new node version (upgrade-v4_1-latest)
+        working-directory: ./tests/upgrade/integration
+        run: |
+          bash scripts/upgrade_v4_1.sh
+
+      - name: Verifying docker processes (post upgrade v4.1)
         working-directory: ./tests/upgrade/integration
         run: |
           docker ps -a
@@ -261,7 +282,7 @@ jobs:
         run: |
           bash scripts/upgrade_v4_2.sh
 
-      - name: Verifying docker processes
+      - name: Verifying docker processes (post upgrade v4.2)
         working-directory: ./tests/upgrade/integration
         run: |
           docker ps -a
