--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,6 @@ jobs:
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
       EXECUTE_RELEASE: ${{ steps.execute-release.outputs.EXECUTE_RELEASE }}
-      LATEST_TAG: ${{ steps.release-type.outputs.LATEST_TAG }}
 
     steps:
       - uses: actions/checkout@v5
@@ -97,26 +96,6 @@ jobs:
         run: |
           RELEASE_VERSION=$( git describe --tags "${{ github.sha }}")
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
-
-      # Set release type
-      - name: Determine release type
-        id: release-type
-        if: steps.execute-release.outputs.EXECUTE_RELEASE == 'true'
-        run: |
-          TAG=$(git describe --tags --exact-match 2>/dev/null || echo "")
-          git fetch --all --tags --quiet || true
-          if git branch -r --contains "$TAG" 2>/dev/null | grep -qE "(origin/main$|origin/HEAD.*main)" || \
-             git merge-base --is-ancestor "$TAG" origin/main 2>/dev/null; then
-            # Tag is on main branch - tagging production release
-            echo "LATEST_TAG=production-latest" >> "$GITHUB_OUTPUT"
-            echo "Detected production release from main branch (tag: $TAG)"
-
-          else
-
-            # Tag is not on main branch - tagging staging release
-            echo "LATEST_TAG=staging-latest" >> "$GITHUB_OUTPUT"
-            echo "Detected staging release from develop branch (tag: $TAG)"
-          fi
 
   release-binary:
     name: "Node binary"
@@ -233,7 +212,8 @@ jobs:
             latest=auto
           tags: |
             type=semver,pattern={{version}},value=${{ needs.release-guard.outputs.RELEASE_VERSION }}
-            type=raw,value=${{ needs.release-guard.outputs.LATEST_TAG }}
+            type=raw,value=production-latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
+            type=raw,value=staging-latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-') }}
             type=sha,format=long
           labels: |
             org.opencontainers.image.vendor="Cheqd Foundation Limited"
