fix: Refine Docker Image tagging approach [DEV-5517] (#943)
* docs: Add v4-minor testnet upgrade binaries file (#936)

* docs: Add v4-minor upgrade binaries file

* Switch to v4.1.6 instead of beta release

* docs: Add mainnet v4-minor upgrade binaries file (#940)

* docs: Add v4-minor upgrade binaries file

* Switch to v4.1.6 instead of beta release

* Add mainnet v4-minor binaries

* fix:  Optimise sleep and wait functions in upgrade tests [DEV-5514] & Optimise sleep funtions in fee abs tests [DEV-5515] (#942)

* optimized sleep and wait functions in tests

* revert wait time

* split docker tag approach

* split docker tag approach

* switch to tag based approach

* fixed readable events slice

* fix panic due to negative tax amount

* Added failsafe assertion adjustment

* Increase decrement to counter jitter

---------

Co-authored-by: Filip Djokic <87134019+filipdjokic@users.noreply.github.com>
Co-authored-by: Tasos Derisiotis <50984242+Eengineer1@users.noreply.github.com>
Co-authored-by: Tasos Derisiotis <tasosderiziotis@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -212,7 +212,8 @@ jobs:
             latest=auto
           tags: |
             type=semver,pattern={{version}},value=${{ needs.release-guard.outputs.RELEASE_VERSION }}
-            type=raw,value=production-latest
+            type=raw,value=production-latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
+            type=raw,value=staging-latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-') }}
             type=sha,format=long
           labels: |
             org.opencontainers.image.vendor="Cheqd Foundation Limited"
